force-app/main/default/objects/CustomersPizzaStore__c/CustomersPizzaStore__c.object-meta.xml
<CustomObject>
    <label>Customer Pizza Store</label>
    <nameField>
        <label>Customer ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>