force-app/main/default/objects/CustomersPizzaStore__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>