force-app/main/default/objects/CustomersPizzaStore__c/fields/Customer_NAme__c.field-meta.xml
<CustomField>
    <fullName>Customer_NAme__c</fullName>
    <label>Customer NAme</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>