force-app/main/default/objects/CustomersPizzaStore__c/validationRules/Customer_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER( Customer_NAme__c )</errorConditionFormula>
    <errorDisplayField>Customer_NAme__c</errorDisplayField>
    <errorMessage>Please Enter a valid Name</errorMessage>
</ValidationRule>