force-app/main/default/objects/CustomersPizzaStore__c/validationRules/Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  Mobile_Number__c ,&quot;(\\d{10})?&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile_Number__c</errorDisplayField>
    <errorMessage>Please Enter A valid Mobile Number</errorMessage>
</ValidationRule>